desenv_tests/test-assets/field/failure/rename_value_not_string.stderr
error: `rename` modifier must contain a string literal. Usage: `#[desenv(rename = "value")]`
 --> test-assets/field/failure/rename_value_not_string.rs:5:14
  |
5 |     #[desenv(rename = ',')]
  |              ^^^^^^
