desenv_tests/test-assets/field/failure/rename_value_not_string.rs
use desenv::Desenv;

#[derive(Desenv)]
struct Config {
    #[desenv(rename = ',')]
    field: String
}

fn main(){}